rescue errors when no RSS feed found; temp fix for Chrome image stretching

--- a/app/assets/stylesheets/commonwealth/show.css.scss
+++ b/app/assets/stylesheets/commonwealth/show.css.scss
@@ -137,7 +137,7 @@
 }
 
 #img_show_container {
-  height: 100%;
+  //height: 100%;
   width:100%;
   text-align: center;
   margin-bottom: 1em;
@@ -151,7 +151,7 @@
     border: 1px solid $light_gray;
     width:auto;
     max-width:100%;
-    height: 100%;
+    //height: 100%;
     max-height: 600px;
   }
 
